--- a/style.css
+++ b/style.css
@@ -105,9 +105,9 @@ a:hover{
 }
 
 .c-box{
-    flex: 1 1 40rem;
+    flex: 1 1 30rem;
     background-color: rgb(236, 233, 233);
-    height: 50rem;
+    height: 47rem;
     border-radius: 1rem;
     margin: 0rem 2rem 2rem 0rem;
     
@@ -222,7 +222,7 @@ section > h1{
 /* responsive code */
 
 /* laptop */
-@media only screen and (max-width:1280px){
+/* @media only screen and (max-width:1280px){
     html{
         font-size: 59%;
     }
@@ -231,9 +231,9 @@ section > h1{
         width: 40rem;
         height:20rem ;
     }
-}
+} */
 
-@media only screen and (max-width:1150px) {
+/* @media only screen and (max-width:1150px) {
     
     html{
         font-size: 55%;
@@ -247,18 +247,18 @@ section > h1{
         width: 38rem;
         padding-left: 5rem;
     }
-} 
+}  */
 
-@media only screen and (max-width:1040px){
+/* @media only screen and (max-width:1040px){
     html{
         font-size: 52%;
     }
     
-}
+} */
 
 
 
-@media only screen and (max-width:940px) {
+/* @media only screen and (max-width:940px) {
     
     html{ 
         font-size: 50%;
@@ -269,10 +269,10 @@ section > h1{
         padding-left: 5rem;
     }
    
-}
+} */
 
 
-@media only screen and (max-width:900px) {
+/* @media only screen and (max-width:900px) {
     
     html{ 
         font-size: 45%;
@@ -284,9 +284,9 @@ section > h1{
     }
    
 }
-    
+     */
 
-@media only screen and (max-width:850px) {
+/* @media only screen and (max-width:850px) {
     
     html{ 
         font-size: 45%;
@@ -297,10 +297,10 @@ section > h1{
         padding-left: 3rem;
     }
    
-}
+} */
 
 
-@media only screen and (max-width:790px) {
+/* @media only screen and (max-width:790px) {
     
     html{ 
         font-size: 42%;
@@ -326,7 +326,7 @@ section > h1{
             padding-top: 2rem;
             padding-left: 2rem;
     }
-   
+} */
 
 
 /*tablet */
