--- a/style.css
+++ b/style.css
@@ -222,18 +222,18 @@ section > h1{
 /* responsive code */
 
 /* laptop */
-/* @media only screen and (max-width:1280px){
+@media only screen and (max-width:1280px){
     html{
         font-size: 59%;
     }
 
-    .my-sec img{
+    /* .my-sec img{
         width: 40rem;
         height:20rem ;
-    }
-} */
+    } */
+}
 
-/* @media only screen and (max-width:1150px) {
+@media only screen and (max-width:1150px) {
     
     html{
         font-size: 55%;
@@ -243,94 +243,73 @@ section > h1{
         background-size: contain;
     }
 
-    .my-sec img{
-        width: 38rem;
-        padding-left: 5rem;
-    }
-}  */
+}  
 
-/* @media only screen and (max-width:1040px){
+@media only screen and (max-width:1040px){
     html{
         font-size: 52%;
     }
     
-} */
+}
 
-
-
-/* @media only screen and (max-width:940px) {
-    
-    html{ 
+@media only screen and (max-width:975px){
+    html{
         font-size: 50%;
     }
-
-    .my-sec img{
-        width: 35rem;
-        padding-left: 5rem;
-    }
-   
-} */
-
-
-/* @media only screen and (max-width:900px) {
-    
-    html{ 
-        font-size: 45%;
-    }
-
-    .my-sec img{
-        width: 32rem;
-        padding-left: 4rem;
-    }
-   
 }
-     */
 
-/* @media only screen and (max-width:850px) {
+@media only screen and (max-width:940px) {
+
+    
+    html{ 
+        font-size: 48%;
+    }
+
+}
+
+
+@media only screen and (max-width:900px) {
     
     html{ 
         font-size: 45%;
     }
 
-    .my-sec img{
-        width: 32rem;
-        padding-left: 3rem;
+}
+    
+
+@media only screen and (max-width:850px) {
+    
+    html{ 
+        font-size: 42%;
     }
    
-} */
+} 
 
 
-/* @media only screen and (max-width:790px) {
+@media only screen and (max-width:790px) {
     
     html{ 
         font-size: 42%;
     }
 
-    .my-sec img{
-        width: 30rem;
-        padding-left: 3rem;
+    section{
+        min-height: 65vh;
+        padding:0 5%;
+        padding-top: 2.5rem;
+        padding-bottom: 2rem;
     }
+}
 
-    .c-box{
-        flex: 1 1 40rem;
-        background-color: rgb(245, 238, 238);
-        width: 50%;
-        height: 55rem;
-        border-radius: 1rem;
-        margin: 0rem 2rem 2rem 0rem;
-        
+@media only screen and (max-width:730px) {
+    
+    html{ 
+        font-size: 40%;
     }
-
-    .c-box img{
-            width: 95%;
-            padding-top: 2rem;
-            padding-left: 2rem;
-    }
-} */
+}
 
 
 /*tablet */
-/* 
+
 @media only screen and (max-width:700px) {
     
     html{
@@ -371,7 +350,6 @@ section > h1{
             height: 70%;     
     }
 
-
 }
 
 @media only screen and (max-width:650px) {
@@ -386,8 +364,63 @@ section > h1{
         padding-left: 2.5rem;
     }
 
-} */
+}
+
+@media only screen and (max-width:650px){
+    html{
+        font-size: 40%;
+    }
+}
+
+@media only screen and (max-width:560px){
+    html{
+        font-size: 36%;
+    
+}
 
 
+/* mobail */
+@media only screen and (max-width:500px){
+    html{
+        font-size: 34%;
+    }
 
+    section{
+        min-height: 45vh;
+        padding:0 3%;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
 
+}
+
+@media only screen and (max-width:480px){
+    html{
+        font-size: 32%;
+    }
+
+}
+
+@media only screen and (max-width:400px){
+    html{
+        font-size: 28%;
+    }
+}
+
+@media only screen and (max-width:350px){
+ html{
+    font-size: 26%;
+    }
+}
+
+@media only screen and (max-width:320px){
+    html{
+       font-size: 24%;
+       }
+   }
+
+   @media only screen and (max-width:280px){
+    html{
+       font-size: 22%;
+       }
+   }   
